# mctodo

./: .gitignore  LICENSE  README.md  pyproject.toml
mctodo/: __init__.py  __main__.py  cli.py  config.py  database.py  todo.py
tests/: test_mytodo.py
